chore: working on retrocompatibility patch to adress changing to integration service!

--- a/src/app/components/aws-sso/aws-sso.component.html
+++ b/src/app/components/aws-sso/aws-sso.component.html
@@ -55,7 +55,7 @@
               <i class="fa fa-exit"></i> Logout
             </ng-container>
           </button>
-          <button class="button pull-right" (click)="forceSync(awsSsoConfiguration.id)" *ngIf="!loadingInBrowser"><i class="fa fa-refresh"></i> Synch</button>
+          <button class="button pull-right" (click)="forceSync(awsSsoConfiguration.id)" *ngIf="!loadingInBrowser"><i class="fa fa-refresh"></i> Sync</button>
         </div>
 
         <div class="sso-card add" (click)="openAddModal(1, selectedAwsSsoConfiguration);">
