--- a/src/app/components/aws-sso/aws-sso.component.scss
+++ b/src/app/components/aws-sso/aws-sso.component.scss
@@ -314,3 +314,14 @@ button.disabled {
     box-shadow: 0 0 8px 1px rgba(0,0,0,0.41), inset 0 0 8px 2px rgba(69,236,255,0.13);
   }
 }
+
+.integration-button {
+  background: white;
+  border-radius: 5px;
+  border: 1px solid #343e48;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 12px;
+  color: #343e48;
+  display: inline-block;
+}
