--- a/src/app/components/aws-sso/aws-sso.component.html
+++ b/src/app/components/aws-sso/aws-sso.component.html
@@ -8,7 +8,7 @@
       <ng-container *ngIf="chooseIntegration">
         <br><br>
         <div>
-          <label><strong>My integration type is:</strong> <i class="fa fa-info-circle" tooltip="integration is a way to obtain credential to access services"></i></label>
+          <label><strong>My integration type is:</strong>&nbsp;&nbsp;<i class="fa fa-info-circle" tooltip="integration is a way to obtain credential to access services"></i></label>
           <br>
           <div class="integration-button" (click)="openAddModal(1, selectedAwsSsoConfiguration);">AWS Single Sign-On</div>
         </div>
@@ -25,24 +25,33 @@
           </div>
 
           <div class="form-group" style="width: 100%; display: inline-block;">
-            <label><strong>Portal Url</strong><span class="danger-text">*</span> <i class="fa fa-info-circle" tooltip="portal url"></i></label>
+            <label><strong>Alias </strong><span class="danger-text">*</span>&nbsp;&nbsp;<i class="fa fa-info-circle" tooltip="Alias"></i></label>
+            <br>
+            <input formControlName="alias" type="url" class="form-control" placeholder="add a custom name here to recognize the configuration" value="{{selectedAwsSsoConfiguration.alias}}">
+            <small class="text-error" *ngIf="(form.controls['alias'].dirty || form.controls['alias'].touched) && form.controls['alias'].errors">Insert the Aws Single Sign-On url</small>
+          </div>
+
+          <div class="form-group" style="width: 100%; display: inline-block;">
+            <label><strong>Portal Url</strong><span class="danger-text">*</span>&nbsp;&nbsp;<i class="fa fa-info-circle" tooltip="portal url"></i></label>
             <br>
             <input formControlName="portalUrl" type="url" class="form-control" placeholder="aws SSO url (eg https://d-xxxxxxxxxx.awsapps.com/start) *" value="{{selectedAwsSsoConfiguration.portalUrl}}">
             <small class="text-error" *ngIf="(form.controls['portalUrl'].dirty || form.controls['portalUrl'].touched) && form.controls['portalUrl'].errors">Insert the Aws Single Sign-On url</small>
           </div>
 
           <div class="form-group" style="width: 100%; display: inline-block;">
-            <label><strong>Select an Aws Region: </strong> <i class="fa fa-info-circle" tooltip="the aws region you've registered your portal into"></i></label>
+            <label><strong>Select an Aws Region: </strong>&nbsp;&nbsp;<i class="fa fa-info-circle" tooltip="the aws region you've registered your portal into"></i></label>
             <ng-select formControlName="awsRegion" bindLabel="region" bindValue="region" [items]="regions" [(ngModel)]="selectedAwsSsoConfiguration.region" dropdownPosition="top"></ng-select>
           </div>
 
           <div class="form-group" style="width: 100%; display: inline-block;">
-            <label><strong>Choose an Authentication method: </strong> <i class="fa fa-info-circle" tooltip="In-app or In-browser"></i></label>
+            <label><strong>Choose an Authentication method: </strong>&nbsp;&nbsp;<i class="fa fa-info-circle" tooltip="In-app or In-browser"></i></label>
             <ng-select formControlName="defaultBrowserOpening" bindLabel="type" bindValue="type" [items]="[{type: eConstants.inApp.toString() }, {type: eConstants.inBrowser.toString() }]" [(ngModel)]="selectedAwsSsoConfiguration.browserOpening" dropdownPosition="top"></ng-select>
           </div>
 
-          <!--<button class="button pull-left disabled" (click)="openAddModal(0, selectedAwsSsoConfiguration)">Cancel</button>-->
-          <button class="button pull-center" (click)="save();">Add integration</button>
+          <button class="button pull-center" (click)="save();">
+            <ng-container *ngIf="modifying === 1">Add integration</ng-container>
+            <ng-container *ngIf="modifying === 2">Edit integration</ng-container>
+          </button>
         </form>
 
       </ng-container>
@@ -50,13 +59,25 @@
       <div class="sso-card-container" *ngIf="modifying === 0 && !chooseIntegration">
 
         <div class="sso-card" *ngFor="let awsSsoConfiguration of awsSsoConfigurations">
-          <p>AWS Single Sign-On</p>
-          <p>{{awsSsoConfiguration.portalUrl}}</p>
-          <p>{{awsSsoConfiguration.region}} - {{awsSsoConfiguration.browserOpening}}</p>
+          <p class="alias"><strong>{{awsSsoConfiguration.alias}}</strong></p>
+          <p class="underlined">{{awsSsoConfiguration.portalUrl}}</p>
+          <p class="uppercased">{{awsSsoConfiguration.region}} - {{awsSsoConfiguration.browserOpening}}</p>
+
+          <span class="status">
+            <ng-container *ngIf=" isOnline(awsSsoConfiguration)">
+              Online <i class="green-dot"></i>
+              <br>
+              <span>Expiring in {{remainingHours(awsSsoConfiguration)}}</span>
+            </ng-container>
+            <ng-container *ngIf="!isOnline(awsSsoConfiguration)">
+              Offline <i class="red-dot"></i>
+            </ng-container>
+          </span>
 
           <button class="button pull-apart" (click)="openAddModal(2, awsSsoConfiguration)" *ngIf="!loadingInBrowser"><i class="fa fa-edit"></i> Edit</button>
           <button class="button pull-apart-2" (click)="delete(awsSsoConfiguration)" *ngIf="!loadingInBrowser"><i class="fa fa-trash"></i> Delete</button>
-          <button class="button pull-left" (click)="logout(awsSsoConfiguration.id)">
+
+          <button class="button pull-left" (click)="logout(awsSsoConfiguration.id)" *ngIf="isOnline(awsSsoConfiguration)">
             <ng-container *ngIf="logoutLoadings[awsSsoConfiguration.id]">
               <i class="fa fa-spin fa-spinner"></i> ...
             </ng-container>
@@ -64,7 +85,11 @@
               <i class="fa fa-exit"></i> Logout
             </ng-container>
           </button>
-          <button class="button pull-right" (click)="forceSync(awsSsoConfiguration.id)" *ngIf="!loadingInBrowser"><i class="fa fa-refresh"></i> Sync</button>
+
+          <button class="button pull-right" (click)="forceSync(awsSsoConfiguration.id)" *ngIf="!loadingInBrowser">
+            <ng-container *ngIf=" isOnline(awsSsoConfiguration)"><i class="fa fa-refresh"></i> Sync</ng-container>
+            <ng-container *ngIf="!isOnline(awsSsoConfiguration)">Login</ng-container>
+          </button>
         </div>
 
         <div class="sso-card add" (click)="chooseIntegration = true;">
