chore: fixed style in integration.component.scss

--- a/src/app/components/integration/integration.component.html
+++ b/src/app/components/integration/integration.component.html
@@ -61,7 +61,7 @@
         <div class="sso-card" *ngFor="let awsSsoConfiguration of awsSsoConfigurations">
           <p class="alias"><strong>{{awsSsoConfiguration.alias}}</strong></p>
           <p class="underlined">{{awsSsoConfiguration.portalUrl}}</p>
-          <p class="uppercased">{{awsSsoConfiguration.region}} - {{awsSsoConfiguration.browserOpening}}</p>
+          <p class="uppercased region-font">{{awsSsoConfiguration.region}} - {{awsSsoConfiguration.browserOpening}}</p>
 
           <span class="status">
             <ng-container *ngIf=" isOnline(awsSsoConfiguration)">
