chore: corrected value of bindValue in segment select

--- a/src/app/components/dialogs/segment-dialog/segment-dialog.component.html
+++ b/src/app/components/dialogs/segment-dialog/segment-dialog.component.html
@@ -8,7 +8,7 @@
     placeholder="Enter new segment name"
     formControlName="segmentName"
     bindLabel="name"
-    bindValue="filterGroup"
+    bindValue="name"
     [closeOnSelect]="true"
     (keyup)="setTemporaryName($event)"
     (keydown.enter)="setByEnter()"
