--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,6 +1,7 @@
 @import "mixins/palette.scss";
 @import "media-query";
-@import"loader";
+@import "loader";
+@import "dark-theme";
 
 $border-radius: 10px;
 $filter-border-radius: 5px;
