--- a/src/assets/scss/mixins/palette.scss
+++ b/src/assets/scss/mixins/palette.scss
@@ -44,6 +44,17 @@ $background: #ffffff;
 $light-color: #ffffff;
 $bright-red: #FF3B30;
 
+/* Leapp Dark-Mode color palette */
+$dark-main-text-color: #DEDCDD;
+$dark-main-background: #363336;
+$dark-table-background: #1F1D1E;
+$dark-region-label-color: #5E5C5D;
+$dark-button-color: #52A8DC;
+$dark-tooltip-color: #4990BA;
+$dark-selected-sidebar: #50466C;
+$dark-hover-sidebar: #554c77;
+$dark-tablehead-border: #404040;
+
 /*service providers*/
 $azr: #035BDA;
 $aws: #FF9900;
