chore: styled dark theme

--- a/src/app/components/filter-menu/filter-menu.component.scss
+++ b/src/app/components/filter-menu/filter-menu.component.scss
@@ -50,7 +50,7 @@ span {
     border: none!important;
     outline: none!important;
     color: $text-color;
-    background: $white-text-color!important;
+    background: $white-text-color;
     padding: 5px 10px 10px 10px;
     font-size: 14px;
   }
