--- a/src/app/components/integration-bar/integration-bar.component.html
+++ b/src/app/components/integration-bar/integration-bar.component.html
@@ -86,7 +86,7 @@
     (dblclick)="forceSync(awsSsoConfiguration.id)">
 
     <div mat-line>
-      <img src="assets/images/aws.png" />
+      <img src="assets/images/aws{{workspaceService.getColorTheme() === eConstants.darkTheme || (workspaceService.getColorTheme() === eConstants.systemDefaultTheme && appService.isDarkMode()) ? '-dark' : ''}}.png" />
       <section class="status" matTooltip="{{isOnline(awsSsoConfiguration) ? 'Expiring ' + remainingHours(awsSsoConfiguration) : 'Offline'}}">
           <ng-container *ngIf="isOnline(awsSsoConfiguration)">
             <b class="green-dot"></b>
