--- a/src/assets/scss/mixins/palette.scss
+++ b/src/assets/scss/mixins/palette.scss
@@ -54,6 +54,21 @@ $dark-tooltip-color: #4990BA;
 $dark-selected-sidebar: #50466C;
 $dark-hover-sidebar: #554c77;
 $dark-tablehead-border: #404040;
+$dark-session-card-border: #404040;
+$dark-region-label-color-active: #9375EF;
+$dark-modal-background: #292426;
+$dark-active-session: #3C3353;
+$dark-selected-session: #9375EF;
+$dark-hover-session: red;
+$dark-start-button: #52A8DC;
+$dark-stop-button: red;
+$dark-offline-session: #797878;
+$dark-select-component: #383537;
+$dark-component-value: #A2A2A2;
+$dark-input-form-border: #787878;
+$dark-mat-menu: #6D6D6D;
+$dark-arrow-border: #A7A7A7;
+$dark-ng-selected: #646464;
 
 /*service providers*/
 $azr: #035BDA;
