--- a/src/assets/scss/dark-theme.scss
+++ b/src/assets/scss/dark-theme.scss
@@ -1,7 +1,8 @@
+@import "mixins/palette.scss";
+
 body.dark-theme {
 
   border: none!important;
-
   background-color: $dark-main-background;
 
   .selected-segment {
@@ -9,6 +10,15 @@ body.dark-theme {
   }
   .mat-expansion-panel {
     background-color: inherit;
+  }
+
+  .left {
+    border: none;
+  }
+
+  .right .main-bar {
+    padding-bottom: 11px!important;
+    padding-top: 12px!important;
   }
 
   .mat-list-item:hover {
@@ -19,19 +29,39 @@ body.dark-theme {
     color: $dark-main-text-color;
   }
 
+  .fa-circle.fas.offline {
+    color: $dark-offline-session!important;
+  }
+
   .table thead th,
   .sessions,
   td {
     background-color: $dark-table-background!important;
     color: $dark-main-text-color!important;
+    &.active {
+      background-color: $dark-active-session!important;
+    }
+    &.selected {
+      background-color: $dark-selected-session!important;
+    }
+  }
+
+  .table tbody td, .table thead th {
+    border-bottom: 0.5px solid $dark-tablehead-border!important;
+  }
+
+  ::ng-deep {
+    tr:hover td:not(.selected) {
+      background: $dark-hover-session!important;
+    }
   }
 
   .table thead th {
-    border-bottom: .5px solid $dark-tablehead-border;
+    border-bottom: 0.5px solid $dark-tablehead-border;
   }
 
   .table tbody td {
-    border-bottom: none;
+    border-bottom: 0.5px solid $dark-session-card-border;
   }
 
   .side-bar {
@@ -50,7 +80,283 @@ body.dark-theme {
     background-color: $dark-main-background;
   }
 
+  ///* Region Badges *///
+
+  .badge.badge-gray {
+    background-color: $dark-region-label-color!important;
+  }
+
+  .badge.badge-black {
+    background-color: $dark-region-label-color-active!important;
+  }
+
+  ///* Contextual Menu *///
+
+  .mat-menu-panel {
+    border: 1px solid $dark-mat-menu;
+    background-color: $dark-modal-background;
+
+    i, span, .mat-menu-submenu-item, polygon {
+      color: $dark-main-text-color;
+    }
+
+    .divider {
+      background-color: $dark-session-card-border;
+    }
+
+    /* .mat-menu-item:hover:not([disabled])::after,
+    .mat-menu-item.cdk-program-focused:not([disabled])::after,
+    .mat-menu-item.cdk-keyboard-focused:not([disabled])::after,
+    .mat-menu-item-highlighted:not([disabled])::after {
+      background-color: $dark-hover-sidebar;
+    }
+    .mat-menu-item {
+      i, span, polygon {
+        color: $dark-main-text-color;
+      }
+    }   */
+
+    .mat-menu-item-highlighted:not([disabled]) {
+      background-color: $dark-modal-background;
+    }
+
+    .mat-menu-item:hover {
+      background-color: $dark-modal-background;
+    }
+
+    .mat-checkbox-frame {
+      border-color: $dark-input-form-border;
+    }
+    .btn-control {
+      background: $dark-button-color;
+    }
+  }
+
+  div.centered span {
+    color: $dark-main-text-color!important;
+  }
+
+  .opt-bar-session-button {
+    span {
+      color: $dark-main-text-color;
+    }
+    i.moon-Play-filled, i.moon-Stop {
+      border-radius: 30px;
+      background-color: $dark-main-text-color;
+      color: $dark-start-button!important;
+    }
+  }
+
+  .opt-bar-middle-section {
+    span, i {
+      color: $dark-main-text-color!important;
+    }
+  }
+
+  input.form-control {
+    background-color: $dark-main-background!important;
+    border-color: $dark-input-form-border;
+  }
+
   .moon-Sidebar, .moon-Filter, .moon-Add, .moon-Refresh, .moon-Setting {
     color: $dark-main-text-color!important;
+  }
+
+  ///* ScrollBar Style *///
+  ::-webkit-scrollbar-track-piece {
+    background-color: $dark-table-background;
+  }
+
+  ///* SideBar Style *///
+  .mat-list-base .mat-list-item:hover, .mat-list-item.selected-integration {
+    background-color: $dark-hover-sidebar!important;
+    .moon-More, .moon-Close {
+      color: $dark-main-text-color!important;
+    }
+  }
+
+  ///* Filter Bar *///
+  .right.extended {
+    .main-bar {
+      position: relative;
+      top: -2px;
+      margin-bottom: -3px!important;
+    }
+    .save-segments {
+      position: absolute;
+      top: 7px;
+    }
+    .tag-filters {
+      padding: 12px 20px;
+    }
+  }
+  .tag-filters {
+    background-color: $dark-table-background;
+    border-top: none!important;
+    button {
+      background-color: $dark-region-label-color;
+      border: .5px solid $dark-session-card-border;
+      color: $dark-main-text-color;
+    }
+    .search-bar {
+      border-bottom: 1px solid $dark-input-form-border!important;
+
+      input {
+        background: $dark-modal-background!important;
+      }
+      hr {
+        border-top: 1px solid $dark-input-form-border!important;
+      }
+    }
+
+  }
+
+  ///* Form Control *///
+  .form-control:focus {
+    color: $dark-main-text-color;
+    border: 1px solid $dark-session-card-border;
+  }
+
+  ///* Modals *///
+  .modal-backdrop.show, .modal-backdrop::after {
+    background-color: #292426;
+    opacity: 0.5;
+  }
+
+  small.text-error {
+    color: $dark-button-color;
+  }
+
+  .modal-content {
+    background-color: $dark-modal-background;
+    border: 1px solid $dark-session-card-border;
+    ::-webkit-scrollbar-track-piece {
+      background-color: $dark-modal-background!important;
+    }
+    td {
+      background-color: $dark-modal-background!important;
+    }
+    div.message {
+      color: $dark-main-text-color!important;
+    }
+    .mat-tab-header {
+      border: 0.3px solid $dark-session-card-border;
+    }
+    div.mat-tab-label {
+      background-color: $dark-modal-background;
+      color: $dark-main-text-color;
+    }
+    label, h2, h4, p {
+      color: $dark-main-text-color;
+      a {
+        color: $dark-hover-sidebar;
+        &:hover {
+          color: $dark-selected-session;
+        }
+      }
+    }
+    .strategy-list .providers {
+      color: $dark-main-text-color;
+      background-color: unset!important;
+      border: 1px solid $dark-input-form-border;
+    }
+    button {
+      background-color: $dark-button-color;
+    }
+    div.ng-select-container {
+      caret-color: $dark-main-text-color;
+      background-color: $dark-select-component;
+      border: none;
+      color: $dark-component-value;
+    }
+    .ng-select.ng-select-opened.ng-select-single .ng-select-container {
+      background-color: $dark-select-component!important;
+      border: 0.3px solid $dark-session-card-border!important;
+      color: $dark-main-text-color!important;
+    }
+    input.form-control {
+      border: none;
+    }
+    .ng-dropdown-panel.ng-select-bottom {
+      background-color: $dark-select-component!important;
+      border: 1px solid $dark-input-form-border!important;
+      & ::-webkit-scrollbar-track-piece {
+        background-color: $dark-select-component!important;
+      }
+    }
+    .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
+      background-color: $dark-select-component!important;
+      span {
+        color: $dark-main-text-color;
+      }
+    }
+    .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-marked span  {
+      background-color: $dark-ng-selected!important;
+    }
+  }
+
+  ::ng-deep {
+    .ng-dropdown-panel {
+      background-color: $dark-select-component!important;
+      border: none !important;
+    }
+    .ng-dropdown-panel-items {
+      background-color: $dark-select-component!important;
+    }
+  }
+
+  .toggled-filter {
+    background-color: $dark-main-text-color!important;
+  }
+
+  .search-bar input {
+    background: unset!important;
+  }
+
+  hr {
+    border-top: 1px solid $dark-input-form-border!important;
+  }
+
+  .search-bar{
+    border-bottom: 1px solid $dark-input-form-border!important;
+  }
+
+  .hero-unit {
+    border: none;
+    img {
+      border-radius: 10px;
+    }
+  }
+
+  .ng-select > .ng-select-container .ng-arrow, .ng-select.ng-select-opened > .ng-select-container .ng-arrow {
+    border-color: $dark-arrow-border;
+  }
+
+  .ng-dropdown-panel.ng-select-bottom {
+    background-color: $dark-select-component!important;
+    border: 1px solid $dark-input-form-border!important;
+    & ::-webkit-scrollbar-track-piece {
+      background-color: $dark-select-component!important;
+    }
+  }
+  .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
+    background-color: $dark-select-component!important;
+    span {
+      color: $dark-main-text-color;
+    }
+  }
+  .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-marked span  {
+    background-color: $dark-ng-selected!important;
+  }
+  .ng-select.ng-select-opened.ng-select-single .ng-select-container {
+    outline: $dark-input-form-border solid 1px !important;
+  }
+
+  .mat-menu-panel .mat-menu-item {
+    color: $dark-main-text-color;
+  }
+
+  .mat-menu-item:hover:not([disabled])::after {
+    background: rgba(255, 255, 255, 0.1);
   }
 }
