chore: fixed some dark theme styles

--- a/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -190,7 +190,7 @@
               <strong>Leapp Pro coming soon</strong>
               <span>Join our community and give us feedback</span>
               <br>
-              <button type="button" class="join-community-button" href="https://join.slack.com/t/noovolari/shared_invite/zt-noc0ju05-18_GRX~Zi6Jz8~95j5CySA">Join</button>
+              <button type="button" class="join-community-button" (click)="appService.openExternalUrl('https://join.slack.com/t/noovolari/shared_invite/zt-noc0ju05-18_GRX~Zi6Jz8~95j5CySA')">Join Us</button>
             </p>
           </div>
         </div>
