--- a/src/assets/scss/mixins/palette.scss
+++ b/src/assets/scss/mixins/palette.scss
@@ -69,6 +69,7 @@ $dark-input-form-border: #787878;
 $dark-mat-menu: #6D6D6D;
 $dark-arrow-border: #A7A7A7;
 $dark-ng-selected: #646464;
+$dark-placeholder-color: #727272;
 
 /*service providers*/
 $azr: #035BDA;
