chore: fixed various dark theme styles

--- a/src/app/components/dialogs/segment-dialog/segment-dialog.component.html
+++ b/src/app/components/dialogs/segment-dialog/segment-dialog.component.html
@@ -20,7 +20,7 @@
     </ng-template>
   </ng-select>
 
-  <small>This segment will show in your sidebar.</small>
+  <small class="segment-hint">This segment will show in your sidebar.</small>
   <br>
   <br>
   <button (click)="saveSegment()" [disabled]="!formValid()" class="{{formValid() ? '': 'mat-button-disabled'}}">Save Segment</button>
