--- a/src/assets/scss/mixins/palette.scss
+++ b/src/assets/scss/mixins/palette.scss
@@ -59,9 +59,8 @@ $dark-region-label-color-active: #9375EF;
 $dark-modal-background: #292426;
 $dark-active-session: #3C3353;
 $dark-selected-session: #9375EF;
-$dark-hover-session: red;
+$dark-hover-session: #302334;
 $dark-start-button: #52A8DC;
-$dark-stop-button: red;
 $dark-offline-session: #797878;
 $dark-select-component: #383537;
 $dark-component-value: #A2A2A2;
@@ -70,6 +69,7 @@ $dark-mat-menu: #6D6D6D;
 $dark-arrow-border: #A7A7A7;
 $dark-ng-selected: #646464;
 $dark-placeholder-color: #727272;
+$dark-icons: #999999;
 
 /*service providers*/
 $azr: #035BDA;
