chore: removed ability to edit some ng-select forms via keyboard and fixed minor dark theme issues

--- a/src/app/components/dialogs/create-dialog/create-dialog.component.html
+++ b/src/app/components/dialogs/create-dialog/create-dialog.component.html
@@ -37,6 +37,7 @@
                          [bindValue]="'value'"
                          (change)="setAccessStrategy(provider);"
                          [clearable]="false"
+                         [searchable]="false"
                          [items]="[{value: eSessionType.awsIamRoleFederated, label: 'AWS IAM Role Federated'}, {value: eSessionType.awsIamUser, label: 'AWS IAM User'}, {value: eSessionType.awsIamRoleChained, label: 'AWS IAM Role Chained'}]"
                          placeholder="Select Session Strategy"
                          [addTag]="false"
